<resources>
    <string name="app_name">MONITORUSERACTIVITY</string>
    <string name="title_activity_welcome">Sign in</string>

    <!-- Strings related to login -->
    <string name="welcomeTextView">Witaj w MonitorowaniuAktywnościUżytkownika!</string>
    <string name="registrationTextView">Pierwszy raz?</string>
    <string name="btn_register">Rejestracja</string>
    <string name="loginTextView">Masz juz konto?</string>
    <string name="btn_login">Zaloguj</string>
    <string name="btn_description">Jak działam?</string>
    <string name="welcome_hint">Czekam na Ciebie.</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_password">hasło</string>
    <string name="hint_name">imie</string>
    <string name="encounterRegister">Zarejestruj się.</string>
    <string name="btn_link_to_welcome">Powrót do menu</string>

    <string name="btn_status">Uruchom</string>
    <string name="btn_logout">Wyloguj</string>
    <string name="mainText">Czekam na Twój ruch!</string>
    <string name="btn_desp">Jak działam?</string>
    <string name="description">Pobieram dane na temat:\n
    -Twojej aktywności\n
    -Twojej lokalizacji\n
    -Twoich połączeniach\n
    -Twoich wiadomosciach\n
    -uzywanych przez Ciebie aplikacji\nDane analizuje na serwerze i udostępniam wyniki na twoim profilu\nNie martw się, dostęp do analizy masz tylko Ty!</string>






</resources>
