<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_weight="0.26">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="MONITOROWANIE AKTYWNOŚCI UŻYTKOWNIKA"
            android:id="@+id/welcomeTextView"
            android:padding="15dp"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:textColor="@color/btn_login_bg"
            android:textSize="18dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnDescription"
            android:text="@string/btn_desp"
            android:background="@drawable/button"
            android:textColor="@color/btn_login"
            android:onClick="goToDescription"
            android:textSize="16dp"
            android:padding="10dp"
            android:layout_margin="15dp"/>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:padding="10dp"
            android:background="@drawable/button"
            android:textColor="@color/btn_login"
            android:id="@+id/btnRegistartion"
            android:onClick="goToRegistration"
            android:textSize="16dp"
            android:layout_margin="15dp"/>



        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:text="@string/btn_login"
            android:background="@drawable/button"
            android:textColor="@color/btn_login"
            android:onClick="goToLogin"
            android:textSize="16dp"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/welcome_hint"
            android:id="@+id/welcomeHintText"
            android:padding="10dp"
            android:layout_marginTop="35dp"
            android:textAlignment="center"
            android:textColor="@color/btn_login_bg"
            android:textSize="16dp" />


    </LinearLayout>



</LinearLayout>