<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_weight="0.26"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="MONITOROWANIE AKTYWNOŚCI UŻYTKOWNIKA"
            android:id="@+id/welcomeTextView"
            android:padding="15dp"
            android:textAlignment="center"
            android:textColor="@color/btn_login_bg"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/button"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login"
            android:onClick="login"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnLinkToWelcomeScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_welcome"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:onClick="backToWelcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/info"
            android:textSize="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>


    </LinearLayout>

</LinearLayout>
