<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">





    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_weight="0.23"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:text="MONITOROWANIE AKTYWNOŚCI UŻYTKOWNIKA"
            android:id="@+id/mainTextView"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textColor="@color/btn_login_bg"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/encounterTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/mainText"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_weight="0.60"
            android:textSize="16dp"
            android:layout_marginTop="90dp"
            android:textColor="#eceef1"/>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_status"
            android:padding="10dp"
            android:background="@drawable/button"
            android:textColor="@color/btn_login"
            android:id="@+id/btnStatus"
            android:onClick="changeAppStatus"
            android:textSize="16dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/loginTextView"
            android:layout_gravity="center_horizontal"
            android:textSize="15dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogout"
            android:text="@string/btn_logout"
            android:background="@drawable/button"
            android:textColor="@color/btn_login"
            android:layout_marginBottom="75dp"
            android:onClick="logOut"
            android:textSize="16dp" />



    </LinearLayout>



</LinearLayout>